--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   app:
     build: ./app
+    # image: Naman2209/image1
     # command: sh -c "sleep 10s; python3 app.py"
     links:
       - db
@@ -19,5 +20,5 @@ services:
         MYSQL_HOST: db
     ports:
         - '3306:3306'
-    volumes:
-        - ./db:/docker-entrypoint-initdb.d/:ro
+    # volumes:
+    #     - ./db:/docker-entrypoint-initdb.d/:ro
