--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       - db
   db:
     container_name: mysql-db
-    image: mysql:latest
+    build: ./db
+    # image: mysql:latest
     restart: always
     environment:
         MYSQL_ROOT_PASSWORD: Naman
