--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./app
+          platform: linux/amd64, linux/arm64
           file: ./app/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/intern_task:app
@@ -31,6 +32,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./db
+          platform: linux/amd64, linux/arm64
           file: ./db/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/intern_task:mysql
